--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=HandicraftsAuction
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:i4yR/dhMoxcJihPl0i4cwFZxQcOwhwwZPgtvPIhD47c=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST= db4free.net
 DB_PORT=3306
-DB_DATABASE=handicrafts_auction
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ordering_auction
+DB_USERNAME=entesar
+DB_PASSWORD=0592684956b
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
