--- a/.env
+++ b/.env
@@ -30,10 +30,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=laraveldemo2018@gmail.com
-MAIL_PASSWORD=lmowxnutcmftbbyh
+MAIL_USERNAME=hsoubcontrolpanel@gmail.com
+MAIL_PASSWORD=p@ssw0rd50500
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=laraveldemo2018@gmail.com
+MAIL_FROM_ADDRESS=hsoubcontrolpanel@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
